# dotfiles

./: .alias  .gitignore  .powerline  .vimrc  README.md  bspwm.sh  dnf_pkgs  fedora_setup.sh  install_terraform.sh  kitty.conf  pipewire.conf  setup_aws_cli_v2.sh  todo_config
.config/: wallpaper
.config/bspwm/: bspwmrc  external-rules
.config/dunst/: launchdunst.sh
.config/gtk-3.0/: settings.ini
.config/i3lock/: cache_bg.sh
.config/kitty/: kitty.conf
.config/nvim/: init.vim
.config/picom/: picom.conf
.config/pipewire/: pipewire.conf
.config/polybar/: config
.config/rofi/: rofi-network-manager.conf  rofi-network-manager.rasi
.config/rofi-pass/: config
.config/spicetify/: config-xpui.ini
.config/sxhkd/: sxhkdrc
.config/wal/: rgb2xterm256.py
.vim/ftplugin/: python.vim
3dprinters/: Configuration.h  Configuration_adv.h  _Bootscreen.h  _Statusscreen.h
bash/: .alias  .bashrc
bspwm/: bspwmrc
cudnn/: cuda.sh  nvidia_driver.sh
etc/gdm/: custom.conf
etc/systemd/: journald.conf
fedora/: README.md  base_requirements.txt  dnf_pkgs  etc_default_grub  fedora_setup.sh  upgrades.md  wiki_cudnn.md  wiki_cudnn.txt
fedora/postinstall/: init_pass.sh  init_services.sh  ssh_key.sh
fedora/setup_scripts/: install_gcloud.sh  (+2 more)
git/: .gitconfig
gtk-3.0/: settings.ini
home/: .alias  .bashrc  .gitconfig
home/.config/marimo/: pyproject.toml
lily58/: README.md  minimal_vim.json  minimal_vim_pretty.json
neovim/: init.vim
pass/: README.md
qmk_layouts/: README.md
sound/: README.md
ubuntu/: etc_default_grub
visuals/: README.md
(+109 files in other folders)
