[project]
name = "dev-environment"
version = "0.1.0"
description = "Development environment with marimo"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "duckdb>=1.3.2",
    "isort>=6.0.1",
    "marimo>=0.15.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

